--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1 style="color: antiquewhite;"></h1>Angelo</h1>
+            <h1 style="color: rgb(248, 222, 187);"></h1>Angelo</h1>
             <p>Asa ang coke ug JD</p>
             <nav>
                 <ul>
