--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <main id="about" class="container" style="display: none;">
         <h2>About Me</h2>
         <p>Lester diay naka kill ug snake</p>
-        <p></p>
+        <br><br><br>
+        <img class="pic" src="les.jpg" alt="">
+
     </main>
 
     <main id="projects" class="container" style="display: none;">
@@ -38,6 +40,8 @@
         <div class="project">
             <h3>Project 1</h3>
             <p>Semi luya sa ta aning dapita</p>
+        <div class="project">
+            <h3><a href="https://github.com/Angelodalde00/Superclass">Superclass</a></h3>
         </div>
         <div class="project">
             <h3>Project 2</h3>
