Adding tired gif

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
     <main id="home" class="container">
         <h2>Welcome mga kaigsoonan sa akong Portfolio!</h2>
+        <p>"Kung g kapoy naka ayaw kabalaka kay apil pod ko gi kapoy na"</p>
+        <p>"Maong hali na higda na na"</p>
+         "<img class="pic" src="tired.gif">"
         
     </main>
 
@@ -31,6 +34,16 @@
         <p>Lester diay naka kill ug snake</p>
         <br><br><br>
         <img class="pic" src="les.jpg" alt="">
+        <h4>Age: 20</h4>
+        <h5>GitHub Codename: <a href="https://github.com/Angelodalde00">Angelodalde00</a></h5>
+        <br>
+        <h3>Skills:</h3>
+        <br>
+        <h5>"Playing moba games"</5>
+        <h5>"Master at smallthings haha "</h5>
+        <h5>"Good listener"</h5>
+        <h5>"Mag toon pakog mga screto sa pag lambo "</h5>
+        <h5>"installer ug glass"</h5>
 
     </main>
 
@@ -39,9 +52,10 @@
         <p>Ah diara</p>
         <div class="project">
             <h3>Project 1</h3>
-            <p>Semi luya sa ta aning dapita</p>
+            <p>Mga prajek ni nako</p>
         <div class="project">
             <h3><a href="https://github.com/Angelodalde00/Superclass">Superclass</a></h3>
+
         </div>
         <div class="project">
             <h3>Project 2</h3>
