Adding 3 project inheritance eccap and color

--- a/index.html
+++ b/index.html
@@ -51,20 +51,16 @@
         <h2>Projects</h2>
         <p>Ah diara</p>
         <div class="project">
-            <h3>Project 1</h3>
+            <h3>Project Portfolio</h3>
             <p>Mga prajek ni nako</p>
         <div class="project">
-            <h3><a href="https://github.com/Angelodalde00/Superclass">Superclass</a></h3>
-
-        </div>
-        <div class="project">
-            <h3>Project 2</h3>
-            <p>Fully luya nasad ta ani</p>
-        </div>
-        <div class="project">
-            <h3>Project 3</h3>
-            <p>Maximum Luya erp dimakaya</p>
-        </div>
+            <h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/blob/main/src/ArraySort/ArrSort.java">ArraySort</a></h3>
+            </div>
+            <div class="project"><h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/Cars">Cars</a></h3></div>
+            <div class="project"><h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/Color">Colors</a></h3></div>
+            <div class="project"><h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/Employee1">Employee</a></h3></div>
+            <div class="project"><h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/Encapsulation">Ecapsulation</a></h3></div>
+            <div class="project"><h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/Inheritance">Inheritance</a></h3></div>
     </main>
 
     <script src="Lester.js"></script>
