--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <main id="projects" class="container" style="display: none;">
         <h2>Projects</h2>
-        <p>Ah diara</p>
+
         <div class="project">
             <h3>Project Portfolio</h3>
             <p>Mga prajek ni nako</p>
@@ -61,7 +61,18 @@
             <div class="project"><h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/Employee1">Employee</a></h3></div>
             <div class="project"><h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/Encapsulation">Ecapsulation</a></h3></div>
             <div class="project"><h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/Inheritance">Inheritance</a></h3></div>
-    </main>
+            <div class="project"><h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/Lamp">Lamp</a></h3></div>
+            <div class="project"><h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/Polymorphism">Polymorphism</a></h3></div>
+            <div class="project"><h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/SampleProject">SampleProject</a></h3></div>
+            <div class="project"><h3><a  href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/Student">Student</a></h3></div>
+
+
+        </main>
+        <main id="repositories" class="container" style="display: none;">
+            <div class="container">
+            <h2>Repositories</h2>
+            </div>
+        </main>
 
     <script src="Lester.js"></script>
 </body>
