Adding the repositories

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     <li><a href="#" onclick="navigateTo('home')">Home</a></li>
                     <li><a href="#" onclick="navigateTo('about')">About</a></li>
                     <li><a href="#" onclick="navigateTo('projects')">Projects</a></li>
+                    <li><a href="#" onclick="navigateTo('repositories')">Repositories</a></li>
                 </ul>
             </nav>
         </div>
@@ -24,7 +25,7 @@
     <main id="home" class="container">
         <h2>Welcome mga kaigsoonan sa akong Portfolio!</h2>
         <p>"Kung g kapoy naka ayaw kabalaka kay apil pod ko gi kapoy na"</p>
-        <p>"Maong hali na higda na na"</p>
+        <p>"Maong hali na higda na"</p>
          "<img class="pic" src="tired.gif">"
         
     </main>
@@ -53,11 +54,12 @@
         <div class="project">
             <h3>Project Portfolio</h3>
             <p>Mga prajek ni nako</p>
+            <br>
         <div class="project">
             <h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/blob/main/src/ArraySort/ArrSort.java">ArraySort</a></h3>
             </div>
             <div class="project"><h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/Cars">Cars</a></h3></div>
-            <div class="project"><h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/Color">Colors</a></h3></div>
+            <div class="project"><h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/Color">Abstract</a></h3></div>
             <div class="project"><h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/Employee1">Employee</a></h3></div>
             <div class="project"><h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/Encapsulation">Ecapsulation</a></h3></div>
             <div class="project"><h3><a href="https://github.com/Angelodalde00/it21c-Portfolio/tree/main/src/Inheritance">Inheritance</a></h3></div>
@@ -72,6 +74,18 @@
             <div class="container">
             <h2>Repositories</h2>
             </div>
+            <br>
+            <div class="repositories"><h3><a href="https://github.com/Angelodalde00/Superclass/tree/main/src">Superclass</a></h3></div>
+            <div class="repositories"><h3><a href="https://github.com/Angelodalde00/Bubbles/tree/main/src/bubble">Bubbles</a></h3></div>
+            <div class="repositories"><h3><a href="https://github.com/Angelodalde00/it24-assessment">it24-assessment</a></h3></div>
+            <div class="repositories"><h3><a href="https://github.com/Angelodalde00/activity">Act.</a></h3></div>
+            <div class="repositories"><h3><a href="https://github.com/Angelodalde00/BankAccount">BankAccount</a></h3></div>
+            <div class="repositories"><h3><a href="https://github.com/Angelodalde00/Linkedlist">Linkedlist</a></h3></div>
+            <div class="repositories"><h3><a href="https://github.com/Angelodalde00/it21c-student/tree/main/Student/src">Student OOP</a></h3></div>
+            <div class="repositories"><h3><a href="https://github.com/Angelodalde00/it24c-branches">Branch</a></h3></div>
+            <div class="repositories"><h3><a href="https://github.com/Angelodalde00/Spa-jquery">Spa-jquery</a></h3></div>
+
+
         </main>
 
     <script src="Lester.js"></script>
